--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "react-joyride",
+  "name": "react-tooltipper",
   "version": "0.7.1",
-  "description": "Create walkthroughs and guided tours for your apps",
-  "author": "Gil Barbara <gilbarbara@gmail.com>",
+  "description": "Create and trigger responsive tooltips for your ReactJS apps",
+  "author": "Jason Rogers <jason@jmichaelrogers.com>",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gilbarbara/react-joyride.git"
+    "url": "git+https://github.com/jmrog/react-tooltipper.git"
   },
   "bugs": {
-    "url": "https://github.com/gilbarbara/react-joyride/issues"
+    "url": "https://github.com/jmrog/react-tooltipper/issues"
   },
-  "homepage": "https://gilbarbara.github.com/react-joyride/",
+  "homepage": "https://jmrog.github.com/react-tooltipper/",
   "main": "index.js",
   "license": "MIT",
   "keywords": [
     "react",
     "react-component",
     "react-mixin",
-    "joyride",
+    "tooltips",
     "walkthroughs",
     "tour"
   ],
