--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "tour"
   ],
   "dependencies": {
-    "react": "^0.13",
     "scroll": "0.0.3"
+  },
+  "peerDependencies": {
+    "react": "^0.14.1",
+    "react-addons-pure-render-mixin": "^0.14.1"
   },
   "devDependencies": {
     "del": "^2.0",
